# aoc

./: .env.example  .gitignore  README.md  aoc.py  pyproject.toml
.github/workflows/: mypy.yaml  ruff.yaml
puzzles/Y2015/D1/: p1.py  p2.py
puzzles/Y2015/D2/: p1.py  p2.py
puzzles/Y2015/D3/: p1.py  p2.py
puzzles/Y2015/D4/: p1.py  p2.py
puzzles/Y2015/D5/: p1.py  p2.py
puzzles/Y2015/D6/: p1.py  p2.py
puzzles/Y2020/D1/: p1.py  p2.py
puzzles/Y2020/D2/: p1.py  p2.py
puzzles/Y2022/D1/: p1.py  p2.py
puzzles/Y2022/D2/: p1.py  p2.py
puzzles/Y2023/D1/: p1.py  p2.py
puzzles/Y2023/D2/: p1.py  p2.py
puzzles/Y2023/D3/: p1.py  p2.py
puzzles/Y2023/D4/: p1.py  p2.py
puzzles/Y2023/D6/: p1.py  p2.py
puzzles/Y2024/D10/: p1.py  p2.py
puzzles/Y2024/D11/: blink.py  p1.py  p2.py
puzzles/Y2024/D12/: p1.py  p2.py
puzzles/Y2024/D13/: p1.py  p2.py  solve.py
puzzles/Y2024/D14/: p1.py  p2.py
puzzles/Y2024/D17/: p1.py
puzzles/Y2024/D5/: p1.py  p2.py
puzzles/Y2024/D6/: p1.py  p2.py
puzzles/Y2024/D7/: p1.py  p2.py
puzzles/Y2025/D1/: p1.py  p2.py
puzzles/Y2025/D11/: p1.py  p2.py
puzzles/Y2025/D2/: p1.py  p2.py
puzzles/Y2025/D3/: p1.py  p2.py
puzzles/Y2025/D4/: p1.py  p2.py
puzzles/Y2025/D5/: p1.py  p2.py
puzzles/Y2025/D6/: p1.py  p2.py
puzzles/Y2025/D7/: p1.py  p2.py
puzzles/Y2025/D9/: p1.py
