[project]
name = "aoc"
version = "0.1.0"
requires-python = ">= 3.12.3"
dependencies = [
    "ruff == 0.8.4",
    "mypy == 1.14.0",
    "requests == 2.32.3",
    "types-requests == 2.32.0.20241016",
    "python-dotenv == 1.0.1"
]

[tool.mypy]
exclude = [
    "build",
]
enable_error_code = ["possibly-undefined"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
explicit_package_bases = true
